--- a/src/App.css
+++ b/src/App.css
@@ -16,29 +16,29 @@
   font-size: 3rem;
 }
 
-.services {
-  background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-2.jpg');
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.products {
-  background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-1.jpg');
+.account {
+  /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-1.jpg'); */
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
-  color: #fff;
+  color: #000;
+  font-size: 100px;
+}
+
+.planner {
+  /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-2.jpg'); */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #000;
   font-size: 100px;
 }
 
 .sign-up {
-  background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-8.jpg');
+  /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-8.jpg'); */
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  color: #fff;
+  color: #000;
   font-size: 100px;
 }
