--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -20,7 +20,7 @@ video {
 
 .hero-container>h1 {
     color: white;
-    font-size: 100px;
+    font-size: 80px;
     margin-top: -100px;
 }
 
@@ -46,12 +46,12 @@ video {
     margin-left: 4px;
 }
 
-@media screen and (max-width : 960px) {
+/* @media screen and (max-width : 960px) {
     .hero-container>h1 {
         font-size: 70px;
         margin-top: -1500px;
     }
-}
+} */
 
 @media screen and (max-width: 768px) {
     .hero-container>h1 {
