로그인 페이지 생성 중

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   font-size: 100px;
 }
 
-.sign-up {
+.sign-in {
   /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-8.jpg'); */
   background-position: center;
   background-size: cover;
