--- a/src/App.css
+++ b/src/App.css
@@ -40,5 +40,58 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #000;
-  font-size: 100px;
+  font-size: 50px;
+}
+
+
+/*sign up (회원가입) -> 일단 로그인 페이지*/
+.main_signup {
+  width: 1000px;
+  text-align: center;
+  background-color: #e2eae8;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.form-main {
+  width: 910px;
+  margin-bottom: 10px;
+  border: 0;
+  border-radius: 5px;
+  padding: 20px;
+  margin: 20px;
+
+}
+
+.submit-btn {
+  border: 0;
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  width: 300px;
+  background-color: rgb(185, 233, 217);
+}
+
+.submit-btnG {
+  border: 0;
+  text-align: center;
+  margin-bottom: 10px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  width: 300px;
+  background-color: rgb(202, 202, 202);
+}
+
+.text-field {
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  width: 300px;
+
 }
