--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   font-family: 'PT Sans', sans-serif;
 }
 
-.home,
+/* .home,
 .account,
 .planner,
 .sing-container {
@@ -14,7 +14,7 @@
   align-items: center;
   justify-content: center;
   font-size: 3rem;
-}
+} */
 
 .account {
   /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-1.jpg'); */
@@ -28,10 +28,12 @@
 .planner {
   /* background-image: url('https: //raw.githubusercontent.com/briancodex/react-website-v1/master/public/images/img-2.jpg'); */
   background-position: center;
-  background-size: cover;
+  background-size: fill;
   background-repeat: no-repeat;
   color: #000;
-  font-size: 100px;
+  margin-top: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 
