--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -16,8 +16,8 @@
 }
 
 .modal>section {
-    width: 90%;
-    max-width: 450px;
+    width: 100%;
+    max-width: 600px;
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
@@ -46,6 +46,7 @@
 }
 
 .modal>section>main {
+    align-items: center;
     padding: 16px;
     border-bottom: 1px solid #dee2e6;
     border-top: 1px solid #dee2e6;
