--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,9 @@
   background-size: fill;
   background-repeat: no-repeat;
   color: #000;
-  font-size: 100px;
+  margin-top: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .planner {
@@ -37,7 +39,7 @@
 }
 
 
-
+/* sign 페이지 css */
 .sign-container {
   text-align: center;
   background-color: #e2eae8;
