--- a/src/App.css
+++ b/src/App.css
@@ -86,5 +86,29 @@
   border-radius: 5px;
   padding: 10px;
   width: 300px;
+}
 
+.account-header {
+  display: flex;
+  width: 100%;
+}
+
+.account-month {
+  text-align: center;
+  width: 35%;
+  margin: 10px;
+  font-size: 30px;
+
+}
+
+.account-total {
+  text-align: center;
+  width: 35%;
+  margin: 10px;
+
+}
+
+.account-addbtn {
+  width: 30%;
+  margin: 10px;
 }
