--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -17,7 +17,7 @@
 
 .modal>section {
     width: 100%;
-    max-width: 600px;
+    max-width: 450px;
     margin: 0 auto;
     border-radius: 0.3rem;
     background-color: #fff;
@@ -46,7 +46,7 @@
 }
 
 .modal>section>main {
-    align-items: center;
+    text-align: center;
     padding: 16px;
     border-bottom: 1px solid #dee2e6;
     border-top: 1px solid #dee2e6;
