--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,23 @@
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
 }
+
+.add-plan-btn {
+  width: 20%;
+  height: 35px;
+  margin: 10px;
+  border: 0;
+  background-color: rgb(185, 233, 217);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
+}
+
+.add-plan-btn:focus {
+  outline: 0;
+}
+
+.add-plan-btn:hover {
+  background: rgba(107, 157, 134, 0.9);
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
+}
