--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@
   background: rgba(107, 157, 134, 0.9);
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
-=======
+}
 
 .account-addbtn {
   width: 30%;
