--- a/src/App.css
+++ b/src/App.css
@@ -220,3 +220,20 @@
   cursor: pointer;
   box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
 }
+
+/* account 내역 리스트 css */
+.histories {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(400px, 1fr));
+  grid-gap: 25px;
+  padding: 50px;
+  width: 100%;
+  padding-top: 70px;
+}
+
+@media screen and (max-width: 1090px) {
+  .histories {
+    grid-template-columns: 1fr;
+    width: 100%;
+  }
+}
