플래너 수정/삭제 코드 구현만 완성

--- a/src/App.css
+++ b/src/App.css
@@ -261,12 +261,15 @@
   empty-cells: show;
 }
 
-th,
-td {
+table.account-table th {
   border-bottom: 1px solid #444444;
   padding: 10px;
 }
 
+table.account-table td {
+  border-bottom: 1px solid #444444;
+  padding: 10px;
+}
 
 
 /* account div 박스 css */
