--- a/src/components/AccountItem.css
+++ b/src/components/AccountItem.css
@@ -4,7 +4,9 @@
     border-radius: 5%;
     transition: 0.3s;
     padding: 10px;
-    width: 48px;
+    width: 40px;
+    margin: 0px;
+    font-size: 5px;
 
 }
 
@@ -26,8 +28,8 @@
     border-radius: 5%;
     transition: 0.3s;
     padding: 10px;
-    width: 48px;
-
+    width: 40px;
+    font-size: 5px;
 }
 
 .account-del:focus {
@@ -48,7 +50,8 @@
     border-radius: 5%;
     transition: 0.3s;
     padding: 10px;
-    width: 48px;
+    width: 40px;
+    font-size: 5px;
 
 }
 
