--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,7 @@
   background-color: rgb(202, 202, 202);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
+  border-radius: 5px;
 }
 
 .account-addbtn:focus {
@@ -210,6 +211,7 @@
   background-color: rgb(185, 233, 217);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
+  border-radius: 5px;
 }
 
 .planner-addbtn:focus {
@@ -262,7 +264,6 @@
   border-top: 1px solid #444444;
   border-collapse: collapse;
   empty-cells: show;
-
 }
 
 table.account-table th {
@@ -282,13 +283,14 @@ table.account-table td {
 }
 
 .add-schedule-submit-btn {
-  width: 50%;
+  width: 390px;
   height: 35px;
   margin: 10px;
   border: 0;
   background-color: rgb(217, 217, 217);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
+  border-radius: 5px;
 }
 
 .add-schedule-submit-btn:focus {
