--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,8 @@
   border: none;
   border-radius: 5px;
   width: 300px;
-  background-color: rgb(185, 233, 217);
-  box-shadow: 0 4px 16px rgba(110, 173, 163, 0.3);
+  background-color: rgb(181, 210, 187);
+  box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
   transition: 0.3s;
 }
 
@@ -91,7 +91,7 @@
   border-radius: 5px;
   width: 300px;
   background-color: rgb(202, 202, 202);
-  box-shadow: 0 4px 16px rgba(110, 173, 163, 0.3);
+  box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
   transition: 0.3s;
 }
 
@@ -205,10 +205,11 @@
 
 .planner-addbtn {
   width: 20%;
+  float: right;
   height: 35px;
   margin: 10px;
   border: 0;
-  background-color: rgb(185, 233, 217);
+  background-color: rgb(181, 210, 187);
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   transition: 0.3s;
   border-radius: 5px;
@@ -280,6 +281,27 @@ table.account-table td {
   width: 100%;
   height: 100%;
   opacity: 0.5;
+}
+
+.add-account-submit-btn {
+  width: 320px;
+  height: 35px;
+  margin: 10px;
+  border: 0;
+  background-color: rgb(217, 217, 217);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.add-account-submit-btn:focus {
+  outline: 0
+}
+
+.add-account-submit-btn:hover {
+  background: rgba(107, 112, 110, 0.9);
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(11, 19, 13, 0.6);
 }
 
 .add-schedule-submit-btn {
